# dbtransformer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
batcher/: Cargo.toml  pyproject.toml
batcher/.cargo/: config.toml
batcher/sample_data_f1/: circuits.parquet  constructor_results.parquet  constructor_standings.parquet  constructors.parquet  drivers.parquet  qualifying.parquet  races.parquet  results.parquet  standings.parquet
batcher/src/: embedder.rs  lib.rs  preprocessor.rs  sampler.rs  types.rs
batcher/tests/: sampler_integration.rs
dbtransformer/: __init__.py  configurations.py  data.py  dummy_data.py  embedder.py  graph_builder.py  hardware_abstraction_layer.py  main.py  model.py  profiling.py  relational_dataset.py  sampler.py  sampler_types.py  types.py
scripts/: download_rel_bench.py  download_relbench.py  sanity_check.py
scripts/dataset/: download_relbench.py  sanity_check.py
tests/: test_demo.py
