[project]
name = "dbtransformer"
version = "0.1.0"
description = "Training a relational database transformer model!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.22.8",
    "duckdb>=1.3.0",
    "jaxtyping>=0.3.3",
    "loguru>=0.7.3",
    "numpy>=2.3.5",
    "polars>=1.35.2",
    "redelex>=0.5.1",
    "relbench>=1.0.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "line-profiler>=5.0.0",
    "memray>=1.19.1",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-loguru>=0.4.0",
    "ruff>=0.14.8",
    "types-tqdm>=4.67.0.20250809",
]

# Lint Rules
[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.lint]
preview = true
# we could consider adding "D" for doc, and "DOC" for more doc
select = [
    "I",
    "E",
    "F",
    "W",
    "B",
    "N",
    "C90",
    "UP",
    "ANN",
    "C4",
    "PT",
    "Q",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "TD",
    "PD",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "RUF",
]
ignore = ["TD003", "F722", "PLR0914", "TRY003", "SIM108"]
# "bugbear" checks are not fixable by default
unfixable = ["B"]

[tool.mypy]
exclude = ["scripts"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "--capture=no"

[build-system]
requires = ["hatchling", "torch"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbtransformer"]
